implement navigation bar with smooth transition

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,14 @@
   </head>
   <body>
     <header>RZM</header>
-    <div class="first">
+    <div class="menu-button">☰</div>
+    <nav class="side-menu">
+      <a href="#home" class="menu-item active">Home</a>
+      <a href="#about" class="menu-item">About</a>
+      <a href="#projects" class="menu-item">Projects </a>
+    </nav>
+
+    <div id="home" class="first">
       <section class="welcome">
         <div class="left"></div>
         <div class="right"></div>
@@ -17,5 +24,7 @@
         COME.
       </div>
     </div>
+    <div id="about">About Me!</div>
+    <div id="projects">My Projects</div>
   </body>
 </html>
